Web Inspector: Stopwatch ASSERT when continuing inspector https://bugs.webkit.org/show_bug.cgi?id=138360

Reviewed by Timothy Hatcher.

We were unconditionally resuming the stopwatch even if we never
paused it in the first place. Maintain a flag for whether the
stopwatch was paused when the debugger last paused.

* inspector/agents/InspectorDebuggerAgent.cpp:
(Inspector::InspectorDebuggerAgent::didPause):
(Inspector::InspectorDebuggerAgent::didContinue):
* inspector/agents/InspectorDebuggerAgent.h:

Canonical link: https://commits.webkit.org/158437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178433 268f45cc-cd09-0410-ab3c-d52691b4dbfc