Source/JavaScriptCore/inspector/agents/InspectorDebuggerAgent.h
@@ -172,6 +172,7 @@ private:
     bool m_enabled {false};
     bool m_javaScriptPauseScheduled {false};
     bool m_hasExceptionValue {false};
+    bool m_didPauseStopwatch {false};
     RefPtr<WTF::Stopwatch> m_stopwatch;
 };
 
